@@ -31,10 +31,18 @@ process_file(const char *filename)
 {
 	avro_file_reader_t  reader;
 
-	if (avro_file_reader(filename, &reader)) {
-		fprintf(stderr, "Error opening %s:\n  %s\n",
-			filename, strerror(errno));
-		exit(1);
+	if (filename == NULL) {
+		if (avro_file_reader_fp(stdin, "<stdin>", 0, &reader)) {
+			fprintf(stderr, "Error opening <stdin>:\n  %s\n",
+				strerror(errno));
+			exit(1);
+		}
+	} else {
+		if (avro_file_reader(filename, &reader)) {
+			fprintf(stderr, "Error opening %s:\n  %s\n",
+				filename, strerror(errno));
+			exit(1);
+		}
 	}
 
 	avro_schema_t  wschema;
@@ -75,9 +83,7 @@ int main(int argc, char **argv)
 	if (argc == 2) {
 		data_filename = argv[1];
 	} else if (argc == 1) {
-		fprintf(stderr, "Must provide an input file.\n");
-		usage();
-		exit(1);
+		data_filename = NULL;
 	} else {
 		fprintf(stderr, "Can't read from multiple input files.\n");
 		usage();
