@@ -30,6 +30,9 @@ Avro 1.6.2 (unreleased)
     input parameters are now "const char *" instead of "char *".
     (Lucas Martin-King via dcreager)
 
+    AVRO-961. C: avrocat/avropipe can now read from stdin.
+    (Michael Cooper via dcreager)
+
   BUG FIXES
 
     AVRO-962. Java: Fix Maven plugin to support string type override.
